# fluentci-demo-cmake

./: CMakeLists.txt  README.md  devbox.json  unit_tests.cpp
.fluentci/: fluentci.toml
.github/workflows/: ci.yml
cmake/: CPM.cmake  get_cpm.cmake  testing.cmake
